quick search: fix alignment of elements, fixes #5878
git-svn-id: svn://develop.studip.de/studip/trunk@34883 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/quicksearch.less
+++ b/public/assets/stylesheets/less/quicksearch.less
@@ -52,7 +52,7 @@ input.quicksearchbox {
         margin-left: -30px;
     }
     
-    display: inline;
+    display: inline-block;
 }
 
 .extendedLayout {
